# HyprViewd

./: CMakeLists.txt  default.nix  flake.nix
src/: CMakeLists.txt  main.cpp
